--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
     <div class="section">
         <div class="grid">
-            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-density="2"
-                data-padding="24" data-grid-size="1">
+            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2"
+                data-grid-padding="24" data-grid-size="1">
                 <div class="labels">
                     <span>Dark</span>
                     <span>Density: 2</span>
                     <span>Size: 1</span>
                 </div>
             </div>
-            <div class="grid-background-container" data-theme="light" data-grid-bg="true" data-density="4"
-                data-padding="24" data-grid-size="1" data-grid-type="repulsion">
+            <div class="grid-background-container" data-theme="light" data-grid-bg="true" data-grid-density="4"
+                data-grid-padding="24" data-grid-size="1" data-grid-type="repulsion">
                 <div class="labels">
                     <span>Light</span>
                     <span>Density: 4</span>
@@ -30,8 +30,8 @@
                     <span>Repulsion</span>
                 </div>
             </div>
-            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-density="6"
-                data-padding="24" data-grid-size="1" data-grid-type="repulsion">
+            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="6"
+                data-grid-padding="24" data-grid-size="1" data-grid-type="repulsion">
                 <div class="labels">
                     <span>Dark</span>
                     <span>Density: 6</span>
