--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="grid-background-container" data-theme="light" data-grid-bg="true" data-grid-density="4"
-                data-grid-padding="24" data-grid-size="1" data-grid-type="repulsion">
+                data-grid-padding="24" data-grid-size="1" data-grid-effect="repulsion">
                 <div class="labels">
                     <span>Light</span>
                     <span>Density: 4</span>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="6"
-                data-grid-padding="24" data-grid-size="1" data-grid-type="repulsion">
+                data-grid-padding="24" data-grid-size="1" data-grid-effect="repulsion">
                 <div class="labels">
                     <span>Dark</span>
                     <span>Density: 6</span>
