--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="section">
         <div class="grid">
-            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2"
+            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="1"
                 data-grid-padding="24" data-grid-size="1">
                 <div class="labels">
                     <span>Dark</span>
@@ -21,13 +21,41 @@
                     <span>Size: 1</span>
                 </div>
             </div>
-            <div class="grid-background-container" data-theme="light" data-grid-bg="true" data-grid-density="4"
-                data-grid-padding="24" data-grid-size="1" data-grid-effect="repulsion">
+            <div class="grid-background-container" data-theme="light" data-grid-bg="true" data-grid-density="1.5"
+                data-grid-padding="24" data-grid-size="1.5" data-grid-effect="repulsion" data-grid-opacity="0.5">
                 <div class="labels">
                     <span>Light</span>
                     <span>Density: 4</span>
                     <span>Size: 1</span>
                     <span>Repulsion</span>
+                    <span>Opacity: 0.5</span>
+                </div>
+            </div>
+            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2"
+                data-grid-padding="24" data-grid-size="2" data-grid-effect="ripple">
+                <div class="labels">
+                    <span>Dark</span>
+                    <span>Density: 1</span>
+                    <span>Size: 1</span>
+                    <span>Ripple</span>
+                </div>
+            </div>
+            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2.5"
+                data-grid-padding="24" data-grid-size="2.5" data-grid-effect="repulsion">
+                <div class="labels">
+                    <span>Dark</span>
+                    <span>Density: 4</span>
+                    <span>Size: 1</span>
+                    <span>Repulsion</span>
+                </div>
+            </div>
+            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2"
+                data-grid-padding="24" data-grid-size="1" data-grid-effect="ripple repulsion">
+                <div class="labels">
+                    <span>Dark</span>
+                    <span>Density: 2</span>
+                    <span>Size: 1</span>
+                    <span>Ripple + Repulsion</span>
                 </div>
             </div>
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="6"
@@ -46,6 +74,7 @@
 
 <script src="components/particles_core.js"></script>
 <script src="components/particles_repulsion.js"></script>
+<script src="components/particles_ripple.js"></script>
 
 
 </html>
