--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 </div>
             </div>
             <div class="grid-background-container" data-theme="light" data-grid-bg="true" data-grid-density="1.5"
-                data-grid-padding="24" data-grid-size="1.5" data-grid-effect="repulsion" data-grid-opacity="0.5">
+                data-grid-padding="24" data-grid-size="1.5" data-grid-effect="repulsion" data-grid-opacity="0.5" 
+                data-repulsion-radius="250" data-repulsion-strength="3" data-repulsion-max-force="4" 
+                data-repulsion-friction="0.85" data-repulsion-return-speed="0.15" data-repulsion-smoothing="0.6">
                 <div class="labels">
                     <span>Light</span>
                     <span>Density: 4</span>
@@ -50,12 +52,14 @@
                 </div>
             </div>
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2"
-                data-grid-padding="24" data-grid-size="1" data-grid-effect="ripple repulsion">
+                data-grid-padding="24" data-grid-size="1" data-grid-effect="ripple"
+                data-ripple-duration="1.5" data-ripple-amplitude="25" data-ripple-thickness="0.25" 
+                data-ripple-max-radius="1.5">
                 <div class="labels">
                     <span>Dark</span>
                     <span>Density: 2</span>
                     <span>Size: 1</span>
-                    <span>Ripple + Repulsion</span>
+                    <span>Ripple</span>
                 </div>
             </div>
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="6"
