--- a/index.html
+++ b/index.html
@@ -54,12 +54,17 @@
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2"
                 data-grid-padding="24" data-grid-size="1" data-grid-effect="ripple"
                 data-ripple-duration="1.5" data-ripple-amplitude="25" data-ripple-thickness="0.25" 
-                data-ripple-max-radius="1.5">
+                data-ripple-max-radius="1.5" data-grid-opacity="0.5">
                 <div class="labels">
                     <span>Dark</span>
                     <span>Density: 2</span>
                     <span>Size: 1</span>
                     <span>Ripple</span>
+                    <span>Duration: 1.5</span>
+                    <span>Amplitude: 25</span>
+                    <span>Thickness: 0.25</span>
+                    <span>Max Radius: 1.5</span>
+                    <span>Opacity: 0.25</span>
                 </div>
             </div>
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="6"
