--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2"
                 data-grid-padding="24" data-grid-size="1" data-grid-effect="ripple"
                 data-ripple-duration="1.5" data-ripple-amplitude="25" data-ripple-thickness="0.25" 
-                data-ripple-max-radius="1.5" data-grid-opacity="0.5">
+                data-ripple-max-radius="1.5" data-grid-opacity="0.5" data-ripple-affect="opacity size">
                 <div class="labels">
                     <span>Dark</span>
                     <span>Density: 2</span>
