--- a/test_particle-grid.html
+++ b/test_particle-grid.html
@@ -21,9 +21,19 @@
                     <span>Size: 1</span>
                 </div>
             </div>
+            <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="1"
+                data-grid-padding="24" data-grid-size="1" data-grid-effect="connect" data-grid-opacity="0.2">
+                <div class="labels">
+                    <span>Dark</span>
+                    <span>Density: 2</span>
+                    <span>Size: 1</span>
+                    <span>Connect Effect</span>
+                    <span>Base Opacity: 0.2</span>
+                </div>
+            </div>
             <div class="grid-background-container" data-theme="light" data-grid-bg="true" data-grid-density="1.5"
-                data-grid-padding="24" data-grid-size="1.5" data-grid-effect="repulsion" data-grid-opacity="0.5" 
-                data-repulsion-radius="250" data-repulsion-strength="3" data-repulsion-max-force="4" 
+                data-grid-padding="24" data-grid-size="1.5" data-grid-effect="repulsion" data-grid-opacity="0.5"
+                data-repulsion-radius="250" data-repulsion-strength="3" data-repulsion-max-force="4"
                 data-repulsion-friction="0.85" data-repulsion-return-speed="0.15" data-repulsion-smoothing="0.6">
                 <div class="labels">
                     <span>Light</span>
@@ -44,7 +54,7 @@
             </div>
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2.5"
                 data-grid-padding="24" data-grid-size="2.5" data-grid-effect="repulsion ripple"
-                data-ripple-duration="1.5" data-ripple-amplitude="25" data-ripple-thickness="0.25" 
+                data-ripple-duration="1.5" data-ripple-amplitude="25" data-ripple-thickness="0.25"
                 data-ripple-max-radius="1.5" data-grid-opacity="0.5" data-ripple-affect="opacity size">
                 <div class="labels">
                     <span>Dark</span>
@@ -54,9 +64,9 @@
                 </div>
             </div>
             <div class="grid-background-container" data-theme="dark" data-grid-bg="true" data-grid-density="2"
-                data-grid-padding="24" data-grid-size="1" data-grid-effect="ripple"
-                data-ripple-duration="1.5" data-ripple-amplitude="25" data-ripple-thickness="0.25" 
-                data-ripple-max-radius="1.5" data-grid-opacity="0.5" data-ripple-affect="opacity size">
+                data-grid-padding="24" data-grid-size="1" data-grid-effect="ripple" data-ripple-duration="1.5"
+                data-ripple-amplitude="25" data-ripple-thickness="0.25" data-ripple-max-radius="1.5"
+                data-grid-opacity="0.5" data-ripple-affect="opacity size">
                 <div class="labels">
                     <span>Dark</span>
                     <span>Density: 2</span>
@@ -86,6 +96,6 @@
 <script src="components/particles_core.js"></script>
 <script src="components/particles_repulsion.js"></script>
 <script src="components/particles_ripple.js"></script>
-
+<script src="components/particles_connect.js"></script>
 
 </html>
